--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
+    "moment": "^2.29.1",
     "vue": "^2.6.14",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
