--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "moment": "^2.29.1",
     "vue": "^2.6.14",
     "vue-moment": "^4.1.0",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
